# Gaussian-Mixture-EM

./: CMakeLists.txt  README.md
gmm/: GaussianMixture.cpp  GaussianMixture.h
src/: GaussianMixture.cpp  GaussianMixture.h
test/: NormalRandomVariable.cpp  NormalRandomVariable.h  hsv2rgb.hpp  test_gmm.cpp
